# Liberoo

./: .gitignore  README.md  generated_model.py  pyproject.toml  score_model.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  users.py
app/db/: base.py
app/db/models/: accessibility.py  country.py  language.py  profile.py  user.py
