[project]
name = "liberoo"
version = "0.0.1"
description = ""
authors = [
    {name = "Liberoo",email = "contact@liberoo.xyz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "liberoo", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
